add: Shared library